# LLMTest_NeedleInAHaystack

./: .gitignore  README.md  pyproject.toml
needlehaystack/: evaluation_context.py  llm_multi_needle_haystack_tester.py  llm_needle_haystack_tester.py  run.py
needlehaystack/Polish/: nad-niemnem-tom-pierwszy.txt  potop-tom-drugi.txt  potop-tom-pierwszy.txt
needlehaystack/evaluators/: cache.py  langsmith.py  openai.py
needlehaystack/providers/: __init__.py  anthropic.py  cohere.py  model.py  openai.py
needlehaystack/viz/: create_viz_from_llm_testing.py
original_results/Bielik-v2.6-11B-Q8_0/: Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_0_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_0_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_10000_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_10000_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_2500_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_2500_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_5000_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_5000_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_7500_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_16000_depth_7500_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_32000_depth_0_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_32000_depth_0_results.json  Bielik-11B-v2_6-Instruct_Q8_0_len_32000_depth_10000_context.txt  Bielik-11B-v2_6-Instruct_Q8_0_len_32000_depth_10000_results.json  (+26 more)
tests/: test_evaluators.py
viz/: create_viz_from_llm_testing.py
