[project]
name = "needleinahaystack-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "anthropic>=0.75.0",
    "langchain[anthropic,openai]>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "openai>=2.11.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "yarl>=1.22.0",
    "langsmith>=0.4.59",
    "setuptools>=80.9.0",
    "cohere>=5.20.0",
    "jsonargparse>=4.44.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
    "protobuf>=6.33.2",
    "sentencepiece>=0.2.1",
]
